[package]
name = "yargs"
version = "0.1.1"
edition = "2018"

description = "a rusty version of xargs"
authors = ["eulegang@eulegang.dev"]
repository = "https://github.com/eulegang/yargs"
readme = "README.md"
license = "MIT"
categories = [ "command-line-utilities" ]
keywords = [ "xargs" ]

[dependencies]
structopt = "0.3"
num_cpus = "1.13"
memchr = "2.4"
